# capstone-projects

./: README.md  capstone_projects.docx
PROJECT 1/: database.py  main.py  postmortem.md  reproduce_crash.py  requirements.txt
PROJECT 10/: analysis.py  backfill_worker.py  legacy_schema.py  migration_strategy.py  rollback_plan.md
PROJECT 11/: bank_api_mock.py  emergency_postmortem.md  monitor_progress.py  payroll_legacy.py  payroll_refactored.py
PROJECT 12/: executor_fix.py  load_test.py  main.py  parser.py  profiling_report.md
PROJECT 13/: architecture_diagram.md  coordinator.py  legacy_dispatch.py  modern_worker.py  redis_rate_limiter.py
PROJECT 14/: benchmark.py  concurrency_report.md  counter_legacy.py  fix_strategies.py  race_proof.py
PROJECT 15/: auction_postmortem.md  bid_logic_legacy.py  lua_engine.py  test_race_condition.py  websocket_handler.py
PROJECT 16/: bias_audit.md  bias_test.py  data_curation.py  train_nairavoice.py
PROJECT 17/: ab_test_design.md  bias_analysis.py  diversity_engine.py  evaluator.py  recommender_svd.py
PROJECT 18/: contract_schema.py  evaluator.py  hybrid_extractor.py  implementation_report.md  vector_store.py
PROJECT 19/: feature_registry.yaml  leakage_detector.py  leakage_report.md  leaky_pipeline.py  temporal_validator.py
PROJECT 2/: auth_utils.py  main.py  security_report.md  test_security.py
PROJECT 20/: benchmarking.py  compliance_report.md  explainability.py  feature_service.py  main.py
PROJECT 21/: data_contract.py  diagnosis.py  migration_runbook.md  modern_scraper.py  test_scraper.py
PROJECT 22/: conftest.py  coverage_report.md  test_endpoints.py  test_logic.py
PROJECT 23/: cli_audit_report.md  error_handler.py  legacy_datadump.py  modern_cli.py  pyproject.toml
PROJECT 24/: .pre-commit-config.yaml  pyproject.toml
PROJECT 25/: database.py  docker-compose.yml  monitoring_report.md  notifications.py  scrapers.py  tasks.py
PROJECT 26/: auth_middleware.py  revocation_manager.py  security_audit.py  threat_model.md  token_service.py
PROJECT 27/: access_manager.py  log_analyzer.py  remediator.py  security_audit.py  security_postmortem.md
PROJECT 28/: app.py  dashboard_components.py  data_management.py  ops_dashboard_report.md
PROJECT 29/: etl_documentation.md  kuda_daily_etl.py  notifications.py  quality_checks.py  transformations.py
PROJECT 3/: app.py  celery_worker.py  runbook.md  simulate_traffic.py
PROJECT 30/: models.py  rate_limiter.py  reset_logic.py  test_security_flow.py  token_lifecycle.md
PROJECT 31/: bounded_memory.py  circuit_breaker.py  memory_profiler.py  performance_report.md  redis_persistence.py
PROJECT 32/: chunk_processor.py  dtype_optimizer.py  memory_audit.py  polars_lazy.py
PROJECT 33/: Verification & Safety Checks  batch_backfill.py
PROJECT 34/: captcha_sentinel.py  human_behavior.py  scraping_audit.md  session_manager.py  stealth_config.py
PROJECT 35/: analytics.py  finance_tracker_v1.md  hybrid_categorizer.py  main.py  pdf_engine.py
PROJECT 36/: idempotency_service.py  incident_resolution.md  test_distributed_integrity.py  worker.py
PROJECT 37/: README.md  data_pipeline.py  pyproject.toml  refactor_report.md
PROJECT 37/src/pipeline_pkg/: __init__.py  __main__.py  cli.py  models.py
PROJECT 37/src/pipeline_pkg/clients/: __init__.py  http.py
PROJECT 37/src/pipeline_pkg/core/: __init__.py  pipeline.py
PROJECT 37/src/pipeline_pkg/services/: __init__.py  email.py  pdf.py
PROJECT 37/src/pipeline_pkg/storage/: __init__.py  database.py
PROJECT 37/src/pipeline_pkg/utils/: __init__.py  logging.py
PROJECT 37/tests/: __init__.py  test_database.py  test_email.py  test_http.py  test_models.py  test_pdf.py  test_pipeline.py
PROJECT 38/: .gitignore  LARGE_FILES_README.md  README.md  aggressive_optimizer.py  build_index.py  compact_indexer.py  data_generator.py  fix_large_index.py  git_lfs_setup.py  handle_large_files.py  handle_large_files_fixed.py  indexer.py  latency_benchmarker.py  legal_precedents.index  legal_precedents_compact.index  legal_precedents_test.index  main.py  metadata_test.csv  optimized_indexer.py  requirements.txt  search_api.py  semantic_search_report.md  test_client.py  test_indexer.py
PROJECT 39/: Dockerfile  Dockerfile.debug  Dockerfile.fixed  README.md  ci_workflow.yml  incident_report.md  pyproject.toml  requirements.txt  scrapy.cfg  simple_test.py  test_dependency_issue.py  test_solution.py
PROJECT 39/.github/workflows/: ci.yml
PROJECT 39/src/stanbic_scraper/: __init__.py  settings.py
PROJECT 39/src/stanbic_scraper/spiders/: stanbic_spider.py
PROJECT 4/: client_simulator.py  main.py  manager.py  postmortem_tradespark.md  redis_config.py
PROJECT 40/: .env.example  Dockerfile  README.md  celery_app.py  config.py  deduplicator.py  delivery.py  docker-compose.yml  intelligence_audit.md  intelligence_engine.py  main.py  monitor.py  reporter.py  requirements.txt  scraper.py  tasks.py
PROJECT 41/: .env.example  README.md  concurrency_test.py  config.py  database.py  idempotency_layer.py  main.py  models.py  order_service.py  requirements.txt  test_race_condition.py
PROJECT 42/: README.md  async_client.py  client.py  pyproject.toml  pytest.ini  requirements.txt  sdk_documentation.md  testing.py
PROJECT 42/examples/: advanced_usage.py  basic_usage.py
PROJECT 42/ml_scoring_sdk/: __init__.py  async_client.py  client.py  exceptions.py  mock_client.py  models.py
PROJECT 42/tests/: __init__.py  test_async_client.py  test_client.py  test_exceptions.py  test_integration.py  test_mock_client.py  test_models.py
PROJECT 43/: .env.example  README.md  drift_detector.py  drift_incident_report.md  main_analysis.py  requirements.txt  retraining_dag.py  shap_analysis.py  slack_alerts.py
PROJECT 44/: .env.example  Dockerfile  README.md  docker-compose.yml  fault_tolerance.md  monitoring.py  pipelines.py  requirements.txt  settings.py
PROJECT 45/: README.md  requirements.txt  security_audit_remediation.md
PROJECT 46/: README.md  api.py  feature_engineering.py  model_training.py  requirements.txt
PROJECT 47/: README.md  code_review.md  (+5 more)
(+139 files in other folders)
